Bug 2000066: Disable tab note truncation in tab hover preview r=dwalker,desktop-theme-reviewers,tabbrowser-reviewers,emilio
Differential Revision: https://phabricator.services.mozilla.com/D277920

UltraBlame original commit: b5684192f2843a2eca7d88bb9bc5b86047bc0a30

--- a/browser/themes/shared/tabbrowser/tab-hover-preview.css
+++ b/browser/themes/shared/tabbrowser/tab-hover-preview.css
@@ -58,10 +58,6 @@
 
 .tab-note-text-container:not(:empty) {
   margin: 0 var(--space-large) var(--space-large);
-  overflow: hidden;
-  display: -webkit-box;
-  -webkit-box-orient: vertical;
-  -webkit-line-clamp: 10;
 }
 
 .tab-preview-add-note {
